# texture-extractor

./: .clang-format  .gitignore  CMakeLists.txt  Info.plist.in  README.md  documentwindow.cpp  documentwindow.h  main.cpp  mainwindow.h
src/: EditableRectItem.cpp  EditableRectItem.h  ExtractedView.cpp  ExtractedView.h  SourceImageView.cpp  SourceImageView.h  documentwindow.cpp  documentwindow.h  main.cpp  mainwindow.cpp  mainwindow.h
